--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		<div class="intro">
 			<div class="intro-sub">I am Abhi</div>
 				<h1>DevOps<span>Engineer</span></h1>
-			<p>I am a fully professional freelance creative User Interface Designer &amp; Developer<br> Involving with latest web designing and technologies is a great <br> feel free to contact creative.</p>
+			<p>I am a passionate Learner with skills sets in different domains like cybersecurity,Web Development, Netwroking,etc.&amp;<br> Currently working as MLOps and DevOps intern in LinuxWorld Informatical Pvt Ltd. <br> Feel Free for any help.</p>
 
       <div class="social-icons">
         <ul class="list-inline">
