--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="onepage, resume, CV HTML template, personal Vcard, html resume, free resume template, free HTML template, free bootstrap template, personal portfolio, free html portfolio">
 	<meta name="author" content="http://trendytheme.net/">
 
-	<title>IAMX – Responsive Personal Portfolio vCard Template</title>
+	<title>I AM ABHINAV</title>
 
   <!-- Web Fonts -->
   <link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
@@ -51,7 +51,7 @@
 	<!-- Home Section -->
 	<section id="home" class="tt-fullHeight" data-stellar-vertical-offset="50" data-stellar-background-ratio="0.2">
 		<div class="intro">
-			<div class="intro-sub">I am Abhi</div>
+			<div class="intro-sub">I am Abhinav</div>
 				<h1>DevOps<span>Engineer</span></h1>
 			<p>I am a passionate Learner with skills sets in different domains like cybersecurity,Web Development, Netwroking,etc.&amp;<br> Currently working as MLOps and DevOps intern in LinuxWorld Informatical Pvt Ltd. <br> Feel free to contact me for any help.</p>
 
